[package]
name = "play-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
hyper = {version = "0.14", features = ["full"]}
tokio = {version = "1.25", features = ["full"]}
tower = {version = "0.4.13", features = ["full"]}
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.97"
parking_lot = "0.12.1"